fixed overlap

--- a/css/main.css
+++ b/css/main.css
@@ -400,9 +400,7 @@ footer p {
   width: 100%;
 }
 /* CHALLENGE THEME */
-body {
-    background: grey;
-}
+
 
 .card-block .btn-outline-primary {
     width: 100%;
@@ -475,6 +473,45 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+    .card-container {
+        perspective: 700px;
+    }
+
+    .card-flip {
+        position: relative;
+        width: 100%;
+        transform-style: preserve-3d;
+        height: auto;
+        transition: all 0.5s ease-out;
+        background: white;
+        border: none;
+    }
+
+        .card-flip div {
+            backface-visibility: hidden;
+            transform-style: preserve-3d;
+            height: 100%;
+            width: 100%;
+            border: none;
+        }
+
+        .card-flip .front {
+            position: relative;
+            z-index: 1;
+        }
+
+        .card-flip .back {
+            position: relative;
+            z-index: 0;
+            transform: rotateY(-180deg);
+            padding: 10px;
+        }
+
+    .card-container:hover .card-flip {
+        transform: rotateY(180deg);
+    }
+
+
   .video,
   .img-recruit {
     display: none;
@@ -507,6 +544,7 @@ body {
     display: grid;
     grid-template-columns: 1fr;
   }
+
 }
 
 @media only screen and (max-width: 768px) {
@@ -522,6 +560,7 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+
   .video,
   .img-recruit {
     display: none;
